extract-doctests/tests/ui/not_supported.rs
use extract_doctest::extract_doctest;

#[extract_doctest(inline_config(template = ""))]
type Test = ();

fn main() {}